# cpp-callable-to-funcptr

./: .gitmodules  .travis.yml  CMakeLists.txt  LICENSE.txt  README.md  appveyor.yml
.github/workflows/: ci.yml
c-testlib/: CMakeLists.txt  testlib.h
include/: funcptr_helper.hpp
include/callable_to_funcptr/: callable.hpp  callable_to_funcptr.hpp  function.hpp  member_function.hpp
include/callable_to_funcptr/callable/: callable.hpp  functor.hpp
include/callable_to_funcptr/detail/: check_header.hpp  define_internal_macros.hpp  funcptr_helper.hpp  hash.hpp  nameof.hpp  sfinae.hpp
include/callable_to_funcptr/detail/callable/: callable.hpp  function.hpp  functor.hpp  helpers.hpp  member_function.hpp
include/nc/: callable_to_funcptr.hpp
include/nc/callable_to_funcptr/: callable_to_funcptr.hpp
include/nc/callable_to_funcptr/detail/: hash.hpp  nameof.hpp
testing/: CMakeLists.txt
testing/c-testlib/: config.h  testlib.c  testlib.h
testing/unit-tests/: CMakeLists.txt  callable_to_funcptr_test.cpp  lambda-to-funcptr-test.cpp
tools/: generate-appveyor-yaml.py  generate-travis-yaml.py
